tests/integration/snapshots/integration__integration__bits_2_bits__anm12_sprite_duplicates.snap
---
source: tests/integration/bits_2_bits.rs
expression: s
---
#pragma game 12
#pragma mapfile "map/any.anmm"

entry {
    path: "subdir/file.png",
    has_data: false,
    rt_width: 512,
    rt_height: 512,
    rt_format: FORMAT_RGB_565,
    memory_priority: 0,
    sprites: {
        sprite0: {x: 0.0, y: 0.0, w: 512.0, h: 480.0},
        sprite1: {x: 0.0, y: 0.0, w: 512.0, h: 480.0},
        sprite2: {x: 0.0, y: 0.0, w: 512.0, h: 480.0},
    },
}


entry {
    path: "subdir/file-2.png",
    has_data: false,
    rt_width: 512,
    rt_height: 512,
    rt_format: FORMAT_RGB_565,
    memory_priority: 0,
    sprites: {
        sprite0: {x: 0.0, y: 0.0, w: 512.0, h: 480.0, id: 0},
        sprite1: {x: 0.0, y: 0.0, w: 512.0, h: 480.0},
        sprite2: {x: 0.0, y: 0.0, w: 512.0, h: 480.0},
    },
}


script 0 script0 {
}

