tests/integration/snapshots/integration__integration__bits_2_bits__anm12_weird_color_format.snap
---
source: tests/integration/bits_2_bits.rs
expression: s
---
#pragma game 12
#pragma mapfile "map/any.anmm"

entry {
    path: "teeny.png",
    img_width: 27,
    img_height: 25,
    img_format: 8,
    rt_width: 128,
    rt_height: 128,
    memory_priority: 0,
    sprites: {sprite0: {x: 0.0, y: 0.0, w: 40.0, h: 60.0}},
}


script 0 script0 {
}

