tests/integration/snapshots/integration__integration__bits_2_bits__msg09_default_mismatched_flags.snap
---
source: tests/integration/bits_2_bits.rs
expression: s
---
#pragma game 9
#pragma mapfile "map/any.msgm"

meta {
    table: {
        0: {script: "script0", flags: 32},
        2: {script: "script0", flags: 256},
        default: {script: "script0", flags: 32},
    },
}


script script0 {
}

